welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(nbPas:Int, versLAvant:Boolean) {if (versLAvant) {for (i<-1 to nbPas) {avance()}}
^Program:2: error: expected class or object definition
def move(nbPas:Int, versLAvant:Boolean) {if (versLAvant) {for (i<-1 to nbPas) {avance()}}
^